--- a/frontend/templates/POP3Log.html
+++ b/frontend/templates/POP3Log.html
@@ -99,24 +99,24 @@
 
                                 <ul class="nav navbar-nav navbar-right navbar-toolbar hidden-sm hidden-xs">
                                     <li class="dropdown">
-                                        <a href="/Index">首页 </a>
+                                        <a href="javascript:void(0)" data-toggle="dropdown">首页 </a>
                                     </li>
-            
+
                                     <li class="dropdown">
                                         <a href="javascript:void(0)" data-toggle="dropdown">账户 <span class="caret"></span></a>
                                         <ul class="dropdown-menu dropdown-menu-right">
                                             <li>
-                                                <a tabindex="-1" href="/ChangePass"> 修改密码 </a>
+                                                <a tabindex="-1" href="javascript:void(0)"> 修改密码 </a>
                                             </li>
                                             <li>
-                                                <a tabindex="-1" id="logout" href="javascript:;"> 退出登录 </a>
+                                                <a tabindex="-1" href="javascript:void(0)"> 退出登录 </a>
                                             </li>
                                         </ul>
                                     </li>
-            
+
                                     <li class="dropdown">
                                         <a href="javascript:void(0)" data-toggle="dropdown">
-                                            <span class="m-r-sm dropdown"> </span>
+                                            <span class="m-r-sm dropdown">  </span>
                                         </a>
                                     </li>
                                 </ul>
@@ -136,24 +136,37 @@
                     <div class="container-fluid p-y-md">
                         <!-- Dynamic Table Full -->
                         <div class="card">
-                            <!-- <div class="card-header">
-                                <h4>Dynamic Table - Full</h4>
-                            </div> -->
                             <div class="card-block">
-                                <table class="table table-condensed" >
+                                <h3>POP3日志列表</h3>
+                                <!-- DataTables init on table by adding .js-dataTable-full class, functionality initialized in js/pages/base_tables_datatables.js -->
+                                <table class="table table-condensed" style="width: 600px; margin-top: 50px; font-size: 20px;">
                                     <thead>
                                         <tr>
-                                            <th class="text-center" style="width: 50px;">序号</th>
-                                            <th class="text-center" style="width: 100px;">用户名称</th>
-                                            <th class="text-center hidden-xs w-40">邮箱地址</th>
-                                            <th class="text-center hidden-xs w-15">SMTP状态</th>
-                                            <th class="text-center" style="width: 100px;">POP3状态</th>
-                                            <th class="text-center" style="width: 100px;">操作</th>
+                                            <!-- <th class="text-center">序号</th> -->
+                                            <!-- <th class="text-center">日期</th> -->
+                                            <!-- <th class="hidden-xs text-center">日志名称</th> -->
+                                            <!-- <th class="hidden-xs w-20 text-center">大小</th> -->
+                                            <!-- <th class="text-center text-center" style="width: 50%;">操作</th> -->
                                         </tr>
                                     </thead>
-                                    <tbody id="userListTable">
+                                    <tbody id="logList">
+                                        <!-- <tr>
+                                            <td class="text-center">1</td>
+                                            <td class="font-500">2020/2/19</td>
+                                            <td class="hidden-xs">client1@example.com</td>
+                                            <td class="hidden-xs">1,000kb</td>
+                                            <td class="text-center">
+                                                <div class="btn-group">
+                                                    <button class="btn btn-xs btn-default" type="button" data-toggle="modal" data-target="#modal-popout" title="查看日志"><i class="ion-eye"></i></button>
+                                                    <button class="btn btn-xs btn-default" type="button" data-toggle="modal" data-target="#modal-slideup" title="删除日志"><i class="ion-close"></i></button>
+                                                </div>
+                                            </td>
+                                        </tr> -->
                                     </tbody>
                                 </table>
+                                <!-- <div class="card-block">
+                                    <button class="btn btn-app" style="margin-left: -20px;" data-toggle="modal" data-target="#modal-slideleft" type="button">清除日志</button>
+                                </div> -->
                             </div>
                             <!-- .card-block -->
                         </div>
@@ -168,40 +181,17 @@
                         <div class="modal-dialog modal-dialog-popout">
                             <div class="modal-content">
                                 <div class="card-header bg-green bg-inverse">
-                                    <h4>用户设置</h4>
+                                    <h4 id="logTitle"></h4>
                                     <ul class="card-actions">
                                         <li>
                                             <button data-dismiss="modal" type="button"><i class="ion-close"></i></button>
                                         </li>
                                     </ul>
                                 </div>
-                                
-                                <div class="card-block" style="padding-bottom: 120px;" name="card-block">
-                                    <div class="form-group">
-                                        <label class="col-xs-12" for="example-select">设置SMTP/POP3启用状态</label>
-                                        <div class="col-sm-9" style="margin-top: 10px;">
-                                            <!-- <P>
-                                            <select class="form-control" id="authselect" name="authselect" size="1">
-                                                <option value="0">普通用户</option>
-                                                <option value="1">管理员</option>
-                                            </select>
-                                            </P> -->
-                                            <p>
-                                                <label class="css-input switch switch-sm switch-primary">
-                                                是否开启SMTP服务 <input id="SMTPoption" type="checkbox" checked /><span></span>
-                                            </label>
-                                            </p>
-                                            <p>
-                                                <label class="css-input switch switch-sm switch-primary">
-                                                是否开启POP3服务 <input id="POP3option" type="checkbox" checked/><span></span>
-                                            </label>
-                                            </p>
-                                        </div>
-                                    </div>
+                                <div class="card-block" id="logContent" style="width: 100%;WORD-WRAP:break-word;TABLE-LAYOUT:fixed;word-break:break-all;">
                                 </div>
                                 <div class="modal-footer">
-                                    <button class="btn btn-sm btn-default" type="button" data-dismiss="modal">取消</button>
-                                    <button class="btn btn-sm btn-app" type="button" data-dismiss="modal" onClick='changeState()' ><i class="ion-checkmark"></i>确定</button>
+                                    <button class="btn btn-sm btn-default" type="button" data-dismiss="modal">关闭</button>
                                 </div>
                             </div>
                         </div>
@@ -221,11 +211,11 @@
                                     </ul>
                                 </div>
                                 <div class="card-block">
-                                    <p>确定要删除用户？</p>
+                                    <p>确定要删除日志？</p>
                                 </div>
                                 <div class="modal-footer">
                                     <button class="btn btn-sm btn-default" type="button" data-dismiss="modal">取消</button>
-                                    <button class="btn btn-sm btn-app" type="button" data-dismiss="modal" onclick="deleteUser()"><i class="ion-checkmark"></i> 确定</button>
+                                    <button class="btn btn-sm btn-app" type="button" data-dismiss="modal" onClick='delePOP3Log()'><i class="ion-checkmark" ></i>确定</button>
                                 </div>
                             </div>
                         </div>
@@ -293,10 +283,8 @@
 
         <!-- Page JS Code -->
         <script src="../../static/js/pages/base_tables_datatables.js"></script>
-        <script type="text/javascript">
-            var users;
-            var userId;
-            // var name="";
+        <script>
+            var mailid;
             $(document).ready(function()
             {
                 $.ajax({
@@ -313,157 +301,69 @@
                 })
                 $.ajax({
                     type: 'GET',
-                    url: '/UserList/',
+                    url: '/POPLogList/',
                     dateType: "json",
                     success: function (data) {
+                        // alert(data.message);
+                        console.log("9999999")
                         var list=data.infoList
-                        // users=list
                         for(var i=0;i<list.length;i++){
-                            // name=list[i].userName;
-                            if(list[i].SMTPstate==1) list[i].SMTPstate="启用"
-                            else if(list[i].SMTPstate==0) list[i].SMTPstate="禁用"
-                            if(list[i].POP3state==1) list[i].POP3state="启用"
-                            else if(list[i].POP3state==0) list[i].POP3state="禁用"
-                            str="<tr><td class=\""+"text-center"+"\">"+(i+1)+
-                                "</td><td class=\""+"text-center"+"\">"+list[i].userName+
-                                "</td><td class=\""+"text-center"+"\">"+list[i].mailAddr+
-                                "</td><td class=\""+"text-center"+"\">"+list[i].SMTPstate+
-                                "</td><td class=\""+"text-center"+"\">"+list[i].POP3state+"</td>"+
-                                "<td  class=\""+"text-center"+"\"><div class=\""+"btn-group"+"\">"+
-                                "<button class=\""+"btn btn-xs btn-default"+"\" type=\""+"button"+"\" data-toggle=\""+"modal"+"\" data-target=\""+"#modal-popout"+"\" title=\""+"Edit Client"+"\" onClick='getForm("+list[i].userId+")'>"
-                                 +"<i class=\""+"ion-edit"+"\" ></i></button>"+
-                                 "<button class=\""+"btn btn-xs btn-default"+"\" type=\""+"button"+"\" data-toggle=\""+"modal"+"\" data-target=\""+"#modal-slideup"+"\" title=\""+"Edit Client"+"\" onClick='getForm("+list[i].userId+")'>"
+                            console.log(list[i].emailId);
+                            mailid=list[i].emailId
+                            var readTime=timeFormatter(list[i].readTime)
+                            console.log(readTime);
+                            str="<tr><td class=\""+"text-center"+"\" align=\""+"left"+"\" valign=\""+"middle"+"\">"
+                                +readTime+"："+list[i].toAddr+"查看了来自"+list[i].fromAddr+"的一封邮件</td>"+
+                                "<td class=\""+"text-center"+"\"><div class=\""+"btn-group"+"\">"+
+                                 "<button class=\""+"btn btn-xs btn-default"+"\" type=\""+"button"+"\" data-toggle=\""+"modal"+"\" data-target=\""+"#modal-slideup"+"\" title=\""+"Edit Client"+"\" onClick='getForm("+list[i].emailId+")'>"
                                  +"<i class=\""+"ion-close"+"\"></i></button>"
                                  +"</div></td></tr>"
-                            $("#userListTable").append(str)
+                            $("#logList").append(str)
                         }
-                        // alert(data.message);
-
                     }
                 })
             });
-            function getForm(name){
-                console.log("调用了getform"+name);
-                userId=name;
+            function timeFormatter(value){
+                console.log(value)
+                var datetime=value.replace("T"," ").replace("Z","")
+                return datetime
+            }
+            function getForm(mailId){
+                mailid=mailId
+            }
+            function delePOP3Log(){
+                console.log(mailid)
                 $.ajax({
                     type: 'POST',
-                    url: '/UserStates/',
+                    url: '/DelePOPLog/',
                     dateType: "json",
                     data: {
-                        userId:userId,
+                        mailId:mailid,
                         csrfmiddlewaretoken:'{{ csrf_token }}'
                     },
-                    success: function (data){
-                        console.log("data.SMTPstate"+data.SMTPstate)
-                        if(data.SMTPstate==1) document.getElementById("SMTPoption").checked=true;
-                        if(data.SMTPstate==0) document.getElementById("SMTPoption").checked=false;
-                        if(data.POP3state==1) document.getElementById("POP3option").checked=true;
-                        if(data.POP3state==0) document.getElementById("POP3option").checked=false;
-                    }
-                })
-            }
-            function changeState(){
-                var op1=SMTPoption.checked;
-                var op2=POP3option.checked;
-                console.log(userId+"的SMTP状态是"+op1)
-                console.log(userId+"的POP3状态是"+op2)
-                if(op1==true){
-                    console.log("选项1开启")
-                    $.ajax({
-                    type: 'POST',
-                    url: '/StartSMTP/',
-                    dateType: "json",
-                    data: {
-                        userId:userId,
-                        csrfmiddlewaretoken:'{{ csrf_token }}'
-                    },
-                    success: function (data) {
-                        console.log(data.message);
-                    }
-                })
-                };//开启SMTP
-
-                if(op1==false){
-                    console.log("选项1关闭")
-                    $.ajax({
-                    type: 'POST',
-                    url: '/StopSMTP/',
-                    dateType: "json",
-                    data: {
-                        userId:userId,
-                        csrfmiddlewaretoken:'{{ csrf_token }}'
-                    },
-                    success: function (data) {
-                        alert(data.message);
-                    }
-                })
-                };//关闭SMTP
-
-                if(op2==true){
-                    console.log("选项2开启")
-                    $.ajax({
-                    type: 'POST',
-                    url: '/StartPOP3/',
-                    dateType: "json",
-                    data: {
-                        userId:userId,
-                        csrfmiddlewaretoken:'{{ csrf_token }}'
-                    },
-                    success: function (data) {
-                        alert(data.message);
-                    }
-                })
-                };//开启POP3
-                if(op2==false){
-                    console.log("选项2关闭")
-                    $.ajax({
-                    type: 'POST',
-                    url: '/StopPOP3/',
-                    dateType: "json",
-                    data: {
-                        userId:userId,
-                        csrfmiddlewaretoken:'{{ csrf_token }}'
-                    },
-                    success: function (data) {
-                        alert(data.message);
-                    }
-                })
-                };//关闭POP3
-                location.reload();
-            }
-            function deleteUser(){//删除用户
-                $.ajax({
-                    type: 'POST',
-                    url: '/DeleUser/',
-                    dateType: "json",
-                    data: {
-                        userId:userId,
-                        csrfmiddlewaretoken:'{{ csrf_token }}'
-                    },
-                    success: function (data) {
+                    success:function(data){
+                        // alert(data.message)
                         location.reload();
-                        // alert(data.message);
+
                     }
+                    
                 })
-                
             }
             $("#logout").click(function () {
-            $.ajax({
-                type: 'GET',
-                url: '/Logout/',
-                // async: false,
-                data: {
-                    csrfmiddlewaretoken: '{{ csrf_token }}'
-                },
-                success: function (data) {
-                    alert(data.message);
-                    if (data.status == 200) window.location.href = "/";
-                }
+                $.ajax({
+                    type: 'GET',
+                    url: '/Logout/',
+                    // async: false,
+                    data: {
+                        csrfmiddlewaretoken: '{{ csrf_token }}'
+                    },
+                    success: function (data) {
+                        alert(data.message);
+                        if (data.status == 200) window.location.href = "/";
+                    }
+                })
             })
-        })
-
         </script>
-
     </body>
 
 </html>
