邮件未读已读状态+首页显示

--- a/frontend/templates/ChangePass.html
+++ b/frontend/templates/ChangePass.html
@@ -199,7 +199,7 @@
                 success: function (data) {
                     if (data.status == 200) {
                         var email = "<" + data.userName + "@skyfall.icu" + ">";
-                        $('#userName').text(data[''])
+                        $('#userName').text(data['userName'])
                         $('#userEmail').text(email)
                     }
                 }
