--- a/frontend/templates/ReceiveEmail.html
+++ b/frontend/templates/ReceiveEmail.html
@@ -217,7 +217,7 @@
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <button class="btn btn-sm btn-app" type="button" data-dismiss="modal">关闭</button>
+                        <button class="btn btn-sm btn-app" type="button" data-dismiss="modal" id="close">关闭</button>
                     </div>
                 </div>
             </div>
@@ -336,6 +336,9 @@
                 }
             })
         }
+        $("#close").click(function() {
+            window.location.href = "/ReceiveEmail";
+        })
         $("#delEmail").click(function () {
             $.ajax({
                 type: 'POST',
