--- a/frontend/templates/CreateUser.html
+++ b/frontend/templates/CreateUser.html
@@ -44,7 +44,7 @@
                     <div class="app-layout-drawer-scroll">
                         <!-- Drawer logo -->
                         <div id="logo" class="drawer-header">
-                            <a href="index.html"><img class="img-responsive" src="../../static/img/logo/logo-backend.jpg" title="AppUI" alt="AppUI" /></a>
+                            <a href="/Index"><img class="img-responsive" src="../../static/img/logo/logo-backend.jpg" title="AppUI" alt="AppUI" /></a>
                         </div>
 
                         <!-- Drawer navigation -->
